css update & video herf dispaly

--- a/savvypro/static/style.css
+++ b/savvypro/static/style.css
@@ -5,6 +5,12 @@
 html {
   letter-spacing: 1px;
 }
+body, div, p,span,{
+  font-size: 18px;
+}
+.relative{
+  font-size: 18px;
+}
 textarea:focus,
 select:focus,
 input:focus,
